# LightBlueSky

./: .gitignore  AGENTS.md  AGENTS.md.bak-20260528-175543  codex_low_altitude_sim_config.toml  opencode.json  pyproject.toml
conversation-records/conversation-record-workflow/: conversation-record-workflow.drawio  record.html  record.md
global_wgs84_ellipsoid_3d_map/: OVERTURE_CLOUD.md  README.md  manifest.json
src/lightbluesky_map/: __init__.py  build_region.py  buildings.py  dataset.py  geoid.py  overture.py  regions.py  terrain.py
tests/: test_global_wgs84_map.py
