[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightbluesky-map"
version = "0.1.0"
description = "WGS84 ellipsoid-height terrain and building dataset tooling for LightBlueSky."
readme = "global_wgs84_ellipsoid_3d_map/README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "geographiclib>=2.0",
    "geopandas>=0.14",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "shapely>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
